<div id="result">
    <div class="rows">
        [[!pdoPage@najax?
            &parents=`[[*id]]` 
            &limit=`5` 
            &cache=`1`
            &tpl=`news_tpl`
        ]]
    </div>
    
    [[!+page.nav.news]]
</div>