@@ -348,7 +348,7 @@
         .desc {
           display: block;
           opacity: 1;
-          top: 95px;
+          top: 105px;
           transition: all 0.3s;
         }
       }
@@ -412,12 +412,14 @@
         }
       }
       .name {
-        background-color: #e8e8e8;
+        background-color: rgba(232, 232, 232, 0.7);
         padding: 7px 20px;
         font-size: 14px;
         color: #221e1f;
         height: 44px;
         overflow: hidden;
+        text-align: center;
+        position: relative;
         span {
           height: 100%;
           overflow: hidden;
@@ -426,6 +428,8 @@
       }
       .desc-wrap {
         padding: 7px 20px 20px;
+        position: relative;
+        background: #fff;
         .model {
           font-size: 14px;
           font-weight: 900;
