@@ -13,6 +13,9 @@ body {
   font-family: 'Roboto', sans-serif;
   min-width: 1200px;
 }
+.content .btn-more {
+  margin-top: 40px;
+}
 .show-all {
   text-align: center;
   margin: 40px 0;
@@ -433,6 +436,29 @@ body {
   border-top: 1px solid #e8e8e8;
   padding-top: 20px;
   margin-top: 40px;
+  overflow: hidden;
+}
+#content .post .desc {
+  display: inline-block;
+  float: left;
+  max-width: 660px;
+}
+#content .post .desc h2 {
+  margin-top: 0;
+}
+#content .post .desc.long {
+  max-width: 100%;
+}
+#content .post .image {
+  float: left;
+  display: inline-block;
+  margin: 0 20px 0 0;
+  max-width: 190px;
+}
+#content .post .image img {
+  max-width: 100%;
+  max-height: 100%;
+  height: auto;
 }
 #content .post:first-child {
   border-top: 0;
@@ -1236,7 +1262,7 @@ ul.pagination li.active a {
   border-radius: 4px 4px 0 0;
   background-color: #e8e8e8;
   padding: 16px 21px;
-  height: 54px;
+  min-height: 54px;
   overflow: hidden;
 }
 #content .sidebar .head img {
@@ -1252,6 +1278,8 @@ ul.pagination li.active a {
   color: #221e1f;
   text-transform: uppercase;
   line-height: 22px;
+  padding-left: 36px;
+  display: block;
 }
 #content .sidebar > ul {
   padding: 0;
