@@ -8,7 +8,7 @@
       border-radius: 4px 4px 0 0;
       background-color: #e8e8e8;
       padding: 16px 21px;
-      height: 54px;
+      min-height: 54px;
       overflow: hidden;
       img {
         width: 26px;
@@ -23,6 +23,8 @@
         color: @black2;
         text-transform: uppercase;
         line-height: 22px;
+        padding-left: 36px;
+        display: block;
       }
     }
     &>ul {
